@@ -2,11 +2,13 @@ package com.hm.picplz.domain.photographer.helper;
 
 import com.hm.picplz.domain.photographer.domain.Photographer;
 import com.hm.picplz.domain.photographer.dto.PhotographerDto;
-import com.hm.picplz.domain.photographer.exception.PhotographerNotFound;
+import com.hm.picplz.domain.photographer.exception.PhotographerErrorCode;
 import com.hm.picplz.domain.photographer.repository.PhotographerRepository;
+import com.hm.picplz.global.error.ExceptionFactory;
+
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.geo.GeoResult;
 import org.springframework.data.redis.connection.RedisGeoCommands.GeoLocation;
@@ -25,12 +27,10 @@ public class PhotographerHelper {
                 .map(result -> {
                     Long memberId = Long.parseLong(result.getContent().getName().toString());
                     Photographer photographer = photographerRepository.findByMemberId(memberId)
-                            .orElseThrow(() -> {
-                                throw PhotographerNotFound.EXCEPTION;
-                            });
+                            .orElseThrow(() ->  ExceptionFactory.of(PhotographerErrorCode.PHOTOGRAPHER_NOT_FOUND));
                     return photographer != null ? PhotographerDto.Card.of(photographer, result.getDistance().getValue()) : null;
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
